// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot 1`] = `
<DocumentFragment>
  <h3
    class="sc-bdnxRM eCWcRC"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-info-circle fa-w-16 sc-dlnjwi hEbaYC"
      data-icon="info-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        fill="currentColor"
      />
    </svg>
    We are working on your request - Expected processing time is 20 mins
  </h3>
  <h3
    class="sc-bdnxRM sc-hKFxyN eCWcRC jIPEne"
  >
    Pull request created...
  </h3>
  <div
    class="sc-jSFjdj hObHgj progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="progress-bar progress-bar-animated progress-bar-striped"
      role="progressbar"
      style="width: 33%;"
    />
  </div>
  <p
    class="sc-gtsrHT dHnfDJ"
  >
    Last updated at Invalid Date
  </p>
</DocumentFragment>
`;

exports[`should match the snapshot 2`] = `
<DocumentFragment>
  <h3
    class="sc-bdnxRM eCWcRC"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-info-circle fa-w-16 sc-dlnjwi hEbaYC"
      data-icon="info-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        fill="currentColor"
      />
    </svg>
    We are working on your request - Expected processing time is 20 mins
  </h3>
  <h3
    class="sc-bdnxRM sc-hKFxyN eCWcRC jIPEne"
  >
    An error has occurred
  </h3>
  <div
    class="sc-jSFjdj hObHgj progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="progress-bar bg-danger progress-bar-animated progress-bar-striped"
      role="progressbar"
      style="width: 100%;"
    />
  </div>
  <p
    class="sc-gtsrHT dHnfDJ"
  >
    Last updated at Invalid Date
  </p>
  <p>
    Please contact our SSO support team by
    <a
      class="sc-eCApnc jSSwhS"
      href="https://chat.developer.gov.bc.ca/channel/sso"
      target="_blank"
      title="Rocket Chat"
    >
      Rocket.Chat
    </a>
     or
    <a
      class="sc-eCApnc jSSwhS"
      href="mailto:zorin.samji@gov.bc.ca"
      target="blank"
      title="Pathfinder SSO"
    >
      Email us
    </a>

  </p>
</DocumentFragment>
`;
